<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyBooks</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="user_alert">亲，在使用之前，请您留下尊姓大名</string>
    <string name="login_button_title">登录</string>
    <string name="register_button_title">注册</string>
    <string name="title_activity_book_list">BookListActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_user_login">UserLoginActivity</string>
    <string name="input_username_hint">请输入您的用户名</string>
    <string name="input_password_hint">请输入您的密码</string>
    <string name="title_activity_user_register">UserRegisterActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok_button">知道了</string>
    <string name="login_title">登录</string>
    <string name="welcome_page_title">欢迎使用我的图书</string>
</resources>
