<LinearLayout
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <EditText
        android:id="@+id/username_editor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_username_hint"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password_editor"
        android:layout_gravity="center_horizontal"
        android:hint="@string/input_password_hint"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Login"
        android:text="@string/login_button_title"/>
</LinearLayout>
